--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "@hagishi/gokuu",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "dist/index.js",
   "devDependencies": {
     "typescript": "^4.4.3"
   },
+  "private": false,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "tsc"
   },
   "author": "kabu <fujiyama@kakumei.jp>",
-  "license": "MIT",
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/hagishi"
-  }
+  "license": "MIT"
 }
